--- a/src/Resources/Locales/en_US.xaml
+++ b/src/Resources/Locales/en_US.xaml
@@ -14,9 +14,8 @@
     <sys:String x:Key="Text.Bytes">{0} Bytes</sys:String>
     <sys:String x:Key="Text.Filter">FILTER</sys:String>
     <sys:String x:Key="Text.Optional">Optional.</sys:String>
-    <sys:String x:Key="Text.FakeFolderFilter">Directory|*.this.directory</sys:String>
     <sys:String x:Key="Text.OpenFolder">SELECT FOLDER</sys:String>
-    <sys:String x:Key="Text.ThemeSwitcher">DARK/LIGHT THEME</sys:String>
+    <sys:String x:Key="Text.ThemeSwitcher">CHANGE THEME</sys:String>
 
     <sys:String x:Key="Text.URL">URL :</sys:String>
     <sys:String x:Key="Text.RepositoryURL">Git Repository URL</sys:String>
