--- a/src/Views/Widgets/RevisionFiles.xaml
+++ b/src/Views/Widgets/RevisionFiles.xaml
@@ -66,7 +66,7 @@
                 <Grid x:Name="layerTextPreview" Visibility="Collapsed" SizeChanged="OnTextPreviewSizeChanged">
                     <DataGrid
                         x:Name="txtPreviewData"
-                        FontFamily="Consolas"
+                        FontFamily="Consolas,Microsoft YaHei UI"
                         RowHeight="16"
                         RowStyle="{StaticResource Style.DataGridRow.TextPreview}"
                         FrozenColumnCount="1"
