--- a/src/Views/Widgets/DiffViewer.xaml
+++ b/src/Views/Widgets/DiffViewer.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:controls="clr-namespace:SourceGit.Views.Controls"
              xmlns:models="clr-namespace:SourceGit.Models"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             Background="{DynamicResource Brush.Contents}"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <Style x:Key="Style.DataGridRow.DiffViewer" TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource Style.DataGridRow}">
