--- a/src/App.xaml
+++ b/src/App.xaml
@@ -1,8 +1,6 @@
 <Application x:Class="SourceGit.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Startup="OnAppStartup" 
-             Deactivated="OnAppDeactivated">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
